# GF2D

./: .gitmodules  CMakeLists.txt
framework/: CMakeLists.txt
framework/include/: HelloWorld.h  IApplication.h
framework/include/Core/: Logger.h
framework/include/core/: Logger.h
framework/src/: HelloWorld.cpp  IApplication.cpp  Logger.cpp
framework/src/Core/: Logger.cpp
game/: CMakeLists.txt
game/include/: Game.h
game/src/: main.cpp
